# cloudbridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/skills/: README.md
.claude/skills/add-cloud-provider/: SKILL.md
.claude/skills/debug-gpui/: SKILL.md
.claude/skills/gpui-style-guide/: SKILL.md
.claude/skills/gpui-test/: SKILL.md
.claude/skills/reduce-clones/: SKILL.md
.claude/skills/refactor-large-files/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
docs/: CODE_REVIEW.md  aws-cost-explorer-policy.json  index.html  policies.md
src/: app.rs  config.rs  crypto.rs  db.rs  main.rs  secret_store.rs
src/cloud/: aliyun.rs  aws.rs  deepseek.rs  mod.rs
src/ui/: accounts.rs  chart.rs  dashboard.rs  mod.rs  settings.rs
